pkl-core/src/test/files/LanguageSnippetTests/input/errors/replTextPreamble.pkl
// make sure that we don't trim this identifier when not using the expression evaluator
`THE REPL TEXT EXPR` = throw("uh oh")
